@@ -10,6 +10,10 @@
 
 * Fixed a bug dealing with parameters changing type within a ParameterisedHolder::ParameterModificationContext.
 
+* GraphComponent::parentChangedSignal() now also provides the previous parent to connected slots in addition to the child argument.
+
+* Fixed a bug where transferring a child from one parent to another would emit parentChangedSignal() twice, once with the child unparented from the old parent, and once with the child reparented to the new parent. Now the singal is only emitted once, omitting the bogus temporary unparenting signal.
+
 0.13.0
 ------
 
